fix .md link format: attempt #1

--- a/ttm.html
+++ b/ttm.html
@@ -17,7 +17,6 @@ ttm
 [-V]
 [-X <i>tag=value</i>]
 [--]
-[<i>file</i>]
 [<i>arg...</i>]
 
 <h2>DESCRIPTION</h2
@@ -663,8 +662,7 @@ by Steven H. Caine and E. Kent Gordon.
 <h2>REFERENCES</h2>
 <ol>
 <li> Caine, S.H. and Gordon, E.K.,
-<a href="https://github.com/Unidata/ttm/blob/master/ttm_interpretive_language_pr_07.pdf">
-TTM: An Experimental Interpretive Language.</a>
+<a href="https://github.com/Unidata/ttm/blob/master/ttm_interpretive_language_pr_07.pdf">TTM: An Experimental Interpretive Language.</a>
 California Institute of Technology, Willis H. Booth Computing Center, Programming Report No. 7, 1968.
 <li> Caine, S.H. and Gordon, E.K.,
 <a href="https://github.com/Unidata/ttm/blog/master/ttm_batch_processing_pr_08.pdf">TTM: A Macro Language for Batch Processing.</a>
